syntax = "proto3";

package log;

option java_package = "com.devappsys.log";



service ContextService {
  rpc SendContext (Context) returns (Response);
  rpc SendContextList (ContextList) returns (Response);
  rpc SendContextFile (ContextFileRequest) returns (Response);
}

message Context {
  string deviceID = 1;
  string appVersion = 2;
  string appPackageName = 3;
  string userID = 4;
  string sessionID = 5;
  string language = 6;
  string networkStatus = 7;
  string location = 8;
  string ipAddress = 9;
  bool isRooted = 10;
}

message Response {
  string message = 1;
  bool success = 2;
}

message ContextList {
  repeated Context contexts = 1;
}

message ContextFileRequest{
  string sessionID = 1;
  string fileName = 2;
  bytes fileContent = 3;
}